# saya-poc

./: .gitignore  README.md  pyproject.toml  requirements.txt
lambda/: index.py
policies/: implementation-plan.md  readme.md  usage-guide.md
policies/app/: allow-app-ingress.yaml  allow-intra-namespace.yaml  allow-selected.yaml  default-deny.yaml  egress-policy.yaml  inter-namespace-policy.yaml  pod-qurantine-poilcy.yaml
policies/security/: allow-external-api.yaml  deny-all-global.yaml  global-rate-limit.yaml  namespace-isolation.yaml  pci-compliance.yaml
policies/tests/: create-test-pods.sh  egress-policy.sh  inter-namespace.sh  pod-quarantine.sh  test-external-access.sh  test-global-policy.sh  test-intra-namespace.sh
saya_poc/: test.py
sceptre/config/dev-private/: config.yaml
sceptre/eks-cluster-addons/: run.sh
sceptre/eks-cluster-addons/asp-ingress/: values.yaml
sceptre/eks-cluster-addons/cluster-autoscaler/: Chart.yaml  values.yaml
sceptre/eks-cluster-addons/fluentbit/: Chart.yaml  values.yaml
sceptre/eks-cluster-addons/ingress/: values.yaml
sceptre/eks-cluster-addons/keychain-ingress/: Chart.yaml
sceptre/templates/: dynamo-db-table-base.yaml  ebs-driver-service-account.yaml  ecr-base.yaml  events-rule-base.yaml  iam-policy-base.yaml  iam-role-base.yaml  iam-user.yaml  lambda-base-v1.yaml  lambda-permission-base.yaml  s3-base.yaml  s3-v1-migrate.yaml  s3-v2.yaml  s3.yaml  sc-iam-role-v2.yaml  security-group.yaml  sns-base.yaml  sns-subscription-base.yaml  ssm-parameter-base.yaml  waf-acl.yaml
sceptre/vars/: dev-private.yaml
(+64 files in other folders)
